# production-grade-ai-agentic-system

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml
src/config/: settings.py
src/data/: db_manager.py
src/data/alembic/: env.py
src/data/alembic/versions/: d1b592582821_create_user_and_session_tables.py
src/data/models/: auth.py  chat_session.py  user.py
src/data/repositories/: chat_session_repository.py  user_repository.py
src/data/schemas/: __init__.py  base.py  chat_session.py  user.py
src/system/: logs.py
