# ========================
# Project Metadata
# ========================
# Basic information about Python project as defined by PEP 621
[project]
name = "Production-Grade-AI-Agentic-System"           # The distribution/package name
version = "1.0.0"                                      # Current project version (semantic versioning recommended)
description = "A production grade AI agentic system."  # Short description shown on package indexes
authors = [                                            # Authors and contributes of the project
    { name = "Mohamed Hegazy", email = "mohamed.hegazy010091@gmail.com" }
]
readme = "README.md"                                   # README file used for long description
requires-python = ">=3.13"                             # Minimum supported Python version
license = { file = "LICENSE" }                         # License of the project
keywords = [ "chatbot", "ai agentic system" ]          # Keywords used for package discovery and search
dependencies = [
    "concurrent-log-handler>=0.9.29",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",

    # Database and Persistence
    "sqlalchemy>=2.0.51",
    "psycopg>=3.3.4",
    "alembic>=1.13.4",
    "asyncpg>=0.31.0",

]

# ==========================================
# Optional Dependencies
# ==========================================
# Extra dependency sets that can be installed with:
#   pip install .[dev]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",                  # Code formatter
    "isort>=8.0.1",                   # Import sorter
    "pylint>=4.0.6",                  # Code linter
]

# ==========================================
# Black (Code Formatter)
# ==========================================
[tool.black]
line-length = 119                             # Maximum line length
extend-exclude = "src/data/alembic"           # Exclude Alembic migration scripts from formatting

# ==========================================
# isort (Import Sorting)
# ==========================================
[tool.isort]
profile = "black"                             # Use Black-compatible import formatting rules
line_length = 119                             # Maximum line length before wrapping imports
skip_gitignore = true                         # Automatically ignore all files/directories listed in .gitignore
skip = [
    "src/data/alembic",                       # Skip auto-formatting on Alembic migration scripts
]

# ==========================================
# Pylint Configuration
# ==========================================
[tool.pylint.format]
max-line-length = 119                         # Maximum allowed line length

[tool.pylint.messages_control]
disable = [
    "consider-using-f-string",
    "too-few-public-methods",
    "redefined-outer-name",
    "unused-argument",
]

[tool.pylint.main]
ignore = [
    "venv",
    "migrations",
    "__pycache__",
]
ignore-paths = [
    "src/data/alembic/.*$",                    # Ignore all files in the Alembic directory
]

[project.urls]
Repository = "https://github.com/mohamedhegazy010091-spec/production-grade-ai-agentic-system"


# Setuptools Configuration
# ========================
# Uses the src/ project layout instead of placing packages at the repository root
[tool.setuptools]
package-dir = {"" = "src"}                 # Treat src/ as the root package directory

# Automatically discover Python packages inside src/
[tool.setuptools.packages.find]
where = ["src"]                           # Search for packages under src/
